services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: xlrelease
  name: svc-xlrelease
spec:
  type: NodePort
  selector:
    app: xlrelease
  ports:
    - port: 5516
